--- a/journal-vue/src/assets/base.css
+++ b/journal-vue/src/assets/base.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
+
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #ffffff;
@@ -56,6 +58,7 @@
   box-sizing: border-box;
   margin: 0;
   font-weight: normal;
+  font-family: "Varela Round";
 }
 
 body {
@@ -64,7 +67,7 @@ body {
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
